k8s-configuration/amqp-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: amqp-deployment
  labels:
    app: amqp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: amqp
  template:
    metadata:
      labels:
        app: amqp
    spec:
      containers:
        - name: rabbitmq
          image: rabbitmq:3-management
          ports:
            - containerPort: 5672  # AMQP port
            - containerPort: 15672 # Management UI port (optional)
          volumeMounts:
            - name: amqp-data
              mountPath: /var/lib/rabbitmq
      volumes:
        - name: amqp-data
          persistentVolumeClaim:
            claimName: amqp-pvc
