k8s-configuration/authentication-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authentication-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: authentication
  template:
    metadata:
      labels:
        app: authentication
    spec:
      containers:
        - name: authentication
          image: shoib/authentication:3.0
          ports:
            - containerPort: 3010
