k8s-configuration/digital-assets-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: digital-assets-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: digital-assets
  template:
    metadata:
      labels:
        app: digital-assets
    spec:
      containers:
        - name: digital-assets
          image: shoib/digital-assets:3.5
          ports:
            - containerPort: 3011
