k8s-configuration/marketplace-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: marketplace-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: marketplace
  template:
    metadata:
      labels:
        app: marketplace
    spec:
      containers:
        - name: marketplace
          image: shoib/marketplace:3.5
          ports:
            - containerPort: 3013
          resources:
            requests:
              cpu: "100m"       # Request 100 milli-CPU (0.1 CPU core)
              memory: "128Mi"    # Optional: Request 128 MiB of memory
            limits:
              cpu: "500m"       # Limit to 500 milli-CPU (0.5 CPU core)
              memory: "256Mi"    # Optional: Limit to 256 MiB of memory
