k8s-configuration/authentication-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: authentication-service
spec:
  selector:
    app: authentication
  ports:
    - protocol: TCP
      port: 3010
      targetPort: 3010
  type: NodePort
