k8s-configuration/marketplace-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: marketplace-service
spec:
  selector:
    app: marketplace
  ports:
    - protocol: TCP
      port: 3013
      targetPort: 3013
  type: NodePort
