k8s-configuration/mongodb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo-service
spec:
  selector:
    app: mongodb
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
  type: NodePort  # Headless service for MongoDB replica set, if you plan to scale in the future
