k8s-configuration/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - host: scalable.services.com
      http:
        paths:
          - path: /authentication(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: authentication-service
                port:
                  number: 3010
          - path: /digital-assets(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: digital-assets-service
                port:
                  number: 3011
          - path: /marketplace(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: marketplace-service
                port:
                  number: 3013
          - path: /payment(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: payment-service
                port:
                  number: 3012
